# jdhe_RAG

./: .gitignore  README.md  app.py  output.txt  pyproject.toml  test_deep_insight.py  test_empty_query.py  test_hang.py  test_hybrid.py  test_models.py  test_query_expansion.py
scripts/: align_ids.py  estimate_costs.py  ingest_local.py  verify_integrity.py
src/: api.py  auth.py  config.py  database.py  llm_client.py  pdf_utils.py  query_router.py
